# weasel-cli-ci-test

./: README.md  pyproject.toml  weasel.py
.github/workflows/: build.yml  cd.yml  ci.yml  deploy.yml
